[package]
name = "hours"
version = "0.1.0"
edition = "2021"
authors = ["Andrew X. Shah <drewshah0@gmail.com>"]
repository = "https://github.com/drewxs/hours"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
text_io = "0.1.12"
toml = "0.8.12"
